# Tangor

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: hogewrapper.hpp  starpu_build_graph.hpp  tangorparam.hpp  tfheppwrapper.hpp  wrappedcodelets.hpp  yosys-json-parser.hpp
python/: HOGEgraph.py  graph.py
src/: CMakeLists.txt  cufhepp_starpu.cu  hogewrapper.cpp  starpu_build_graph.cpp  tangor.cpp  tfheppwrapper.cpp  wrappedcodelets.cpp  yosys-json-parser.cpp
test/: CMakeLists.txt  CPUbenchmark.bash  HOGEbenchmark.bash
test/addermini/: build.sbt  client.cpp  test.bash
test/aes/: build.ys  client.cpp
test/c1355/: build.ys  client.cpp  test.bash
test/c17/: build.ys  client.cpp  test.bash
test/c1908/: build.ys  client.cpp  test.bash
test/c2670/: build.ys  client.cpp  test.bash
test/c3540/: build.ys  client.cpp  test.bash
test/c432/: build.ys  client.cpp  test.bash
test/c499/: build.ys  client.cpp  test.bash
test/c5315/: build.ys  client.cpp  test.bash
test/c7552/: build.ys  client.cpp  test.bash
test/c880/: build.ys  client.cpp  test.bash
test/mul/: client.cpp  test.bash
test/mul/src/main/scala/: mul.scala
thirdparties/xcl2/: xcl2.hpp
